--- a/package.json
+++ b/package.json
@@ -1,26 +1,20 @@
 {
   "name": "weather-service",
   "version": "1.0.0",
-  "description": "",
+  "description": "A backend service to collect weather data",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "axios": "^1.7.9",
-    "dotenv": "^16.4.7",
+    "axios": "^1.5.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.21.2",
-    "mongoose": "^8.9.6",
-    "winston": "^3.17.0"
+    "mongoose": "^8.9.6"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.9",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "jest": "^29.5.0"
   }
 }
