--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 OPENWEATHER_API_KEY=660794fee1a39c77adb855c31e07b7aa
-MONGO_URI=mongodb://localhost:27017/weatherDB
+MONGO_URI=mongodb+srv://Lokeshwar:<Lokeshwar12>@cluster0.gxfel.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
